--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="icon" href="./image/paper-plane.png" type="image/png" sizes="16x16">
 </head>
 <body>
-    
+    <div class="liquid">
+        <h2>Coming Soon</h2>
+        <h2>Coming Soon</h2>
+        <h2>Coming Soon</h2>
+        <h2>Coming Soon</h2>
+    </div>
 </body>
 </html>
