--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="./image/paper-plane.png" type="image/png" sizes="16x16">
 </head>
 <body>
-    <div class="liquid">
+    <div class="agua">
         <h2>Coming Soon</h2>
         <h2>Coming Soon</h2>
         <h2>Coming Soon</h2>
