--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comming soon</title>
-    <link rel="stylesheet" href="./style.cs">
+    <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./image/paper-plane.png" type="image/png" sizes="16x16">
 </head>
 <body>
